# smux

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.planning/: CODEX-GSD-SEEDS.md  CODEX-MILESTONE-CONTEXT.md  CODEX-RELEASE-READINESS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: relay-viewport-capture-architecture.md
.planning/phases/01-host-managed-pty/: 01-01-PLAN.md
.planning/phases/01-surface-lifecycle-fix/: 01-01-PLAN.md  01-01-SUMMARY.md  01-UAT.md
.planning/phases/02-pty-output-capture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-ping-pong-relay/: 03-01-PLAN.md  03-VERIFICATION.md
.planning/phases/04-e2e-feature-verification/: 04-01-PLAN.md  04-VERIFICATION.md
crates/smux-app/: index.html  package-lock.json  package.json  vite.config.ts
crates/smux-app/src/: App.tsx  index.css
crates/smux-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/smux-app/src-tauri/capabilities/: default.json
crates/smux-app/src-tauri/icons/: icon.icns
crates/smux-app/src-tauri/src/: main.rs
crates/smux-cli/: Cargo.toml
crates/smux-cli/src/: main.rs
crates/smux-cli/tests/: cli_smoke.rs  start_command.rs
crates/smux-core/: Cargo.toml
crates/smux-core/src/: audit.rs  config.rs  consensus.rs  context.rs  git_worktree.rs  health.rs  ipc.rs  lib.rs  orchestrator.rs  ownership.rs  pipeline.rs  redaction.rs  safety.rs  session_store.rs  stop.rs  types.rs
crates/smux-core/src/adapter/: claude.rs  codex.rs  fake.rs  gemini.rs  mod.rs
crates/smux-core/tests/: adapter_contract.rs  audit.rs  config.rs  context_passing.rs  git_worktree.rs  health.rs  ipc_protocol.rs  ipc_session_pipeline.rs  orchestrator_fake.rs  ownership_lanes.rs  pipeline_routing.rs  redaction.rs  rewind.rs  safety.rs  session_cleanup.rs  session_pipeline.rs  stop_detection.rs
crates/smux-daemon/: Cargo.toml
crates/smux-daemon/src/: main.rs
crates/smux-daemon/tests/: daemon_smoke.rs
docs/: DEMO_SCRIPT.md  index.html
docs/adr/: 001-terminal-rendering-engine.md  002-native-toolchain-gate.md
docs/design/: DESIGN.md  STYLE_GUIDE.md
docs/design/screens/: smux-compare-deep-navy.html  smux-compare-deep-navy.json  smux-console-deep-navy.html  smux-console-deep-navy.json  smux-console-forest-green.html  smux-console-forest-green.json  smux-operator-console-1.html  smux-operator-console-1.json  smux-operator-console-2.html  smux-operator-console-2.json  smux-rewind-deep-navy.html  smux-rewind-deep-navy.json  smux-rewind-forest-green.html  smux-rewind-forest-green.json  smux-rewind-mode-1.html  smux-rewind-mode-1.json  smux-rewind-mode-2.html  smux-rewind-mode-2.json
docs/plans/: 2026-03-21-dogfood-observations.md  2026-03-21-smux-v0.1-capability-notes.md  2026-03-21-smux-v0.1-headless-prototype.md  2026-03-21-verification-gate-skill-design.md  2026-03-21-verification-gate-skill-test-report.md  2026-03-22-cross-verify-design.md  2026-03-22-smux-v0.1-acceptance-report.md  2026-03-22-smux-v0.2-acceptance-report.md  2026-03-22-smux-v0.2-production-cli.md  2026-03-22-smux-v0.3-acceptance-report.md  2026-03-22-smux-v0.3-tauri-ui.md  2026-03-22-smux-v0.4-acceptance-report.md  2026-03-22-smux-v0.4-hardening.md  2026-03-22-v05-competitive-upgrade.md  2026-03-23-v05-enhanced-competitive-plan.md  2026-03-24-native-multi-agent-relay-design.md  2026-03-24-native-multi-agent-relay-implementation-plan.md
docs/plans/verification-gate-skill/: SKILL.md
docs/site/: index.html  stitch-prompt.md
docs/superpowers/plans/: 2026-03-25-smux-stability-tmux-grade.md
docs/superpowers/specs/: 2026-03-21-smux-design.md
macos/smux/: .gitignore  Package.swift  README.md
macos/smux/.build/: build.db  debug.yaml  workspace-state.json
macos/smux/.planning/: PROJECT.md  REQUIREMENTS.md
(+324 files in other folders)
