[package]
name = "smux-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dirs = "6"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
