[package]
name = "smux-core"
version = "0.2.0"
edition = "2024"
license.workspace = true

[dependencies]
async-trait = "0.1"
dirs = "6"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
